--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bufferutil": "^4.0.8",
     "discord.js": "^14.16.1",
+    "dotenv": "^16.4.5",
     "utf-8-validate": "^6.0.4",
     "zlib-sync": "^0.1.9"
   },
